update: node index.js instead of app.js

--- a/fly.toml
+++ b/fly.toml
@@ -10,7 +10,7 @@ primary_region = 'arn'
   PORT = "3001" # add this where PORT matches the internal_port below
 
 [processes]
-  app = "node app.js" # add this
+  app = "node index.js" # add this
 
 [http_service]
   internal_port = 3001
