--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -15,9 +15,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check URL health
-        uses: ilyas-korobkov/url-health-check@v1
+        uses: jtalk/url-health-check-action@v4
         with:
-          url: https://phone-book-peogway.fly.dev/health
-          timeout: 10s
-          retry: 3
+          follow-redirect: false # Optional, defaults to "false"
+          # Fail this action after this many failed attempts
+          max-attempts: 3 # Optional, defaults to 1
+          # Delay between retries
+          retry-delay: 5s # Optional, only applicable to max-attempts > 1
+          # Retry all errors, including 404. This option might trigger curl upgrade.
+          retry-all: false # Optional, defaults to "false"
+          # String representation of cookie attached to health check request.
+          # Format: `Name=Value`
+          cookie: 'token=asdf1234' # Optional, default is empty
+          # Basic auth login password pair.
+          # Format: `login:password`
+          basic-auth: 'login:password' # Optional, default is empty
+
 
