--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Check URL health
         uses: jtalk/url-health-check-action@v4
         with:
+          url: https://phone-book-peogway.fly.dev/health
           follow-redirect: false # Optional, defaults to "false"
           # Fail this action after this many failed attempts
           max-attempts: 3 # Optional, defaults to 1
