--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
-		"test": "echo \\\"Error: no test specified\\\" && exit 1",
+		"test": "jest",
 		"dev": "nodemon index.js",
 		"build:ui": "cd Phonebook && npm run build && rm -rf ../dist && cp -r dist ../dist",
 		"deploy": "fly deploy",
 		"deploy:full": "npm run build:ui && npm run deploy",
 		"logs:prod": "fly logs",
-		"lint": "eslint ."
+		"eslint": "eslint './**/*.{js,jsx}'",
+		"build": "webpack --mode production",
+		"test:e2e": "cypress run"
 	},
 	"author": "peogway",
 	"license": "MIT",
