--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
-		"test": "jest",
 		"dev": "nodemon index.js",
+		"test": "jest",
 		"build:ui": "cd Phonebook && npm run build && rm -rf ../dist && cp -r dist ../dist",
 		"deploy": "fly deploy",
 		"deploy:full": "npm run build:ui && npm run deploy",
 		"logs:prod": "fly logs",
-		"eslint": "eslint './**/*.{js,jsx}'",
+		"eslint": "eslint ./**/*.{js,jsx}",
 		"build": "webpack --mode production",
 		"test:e2e": "cypress run"
 	},
@@ -18,19 +18,47 @@
 	"license": "MIT",
 	"description": "",
 	"dependencies": {
+		"@babel/runtime": "^7.28.3",
+		"axios": "^1.11.0",
 		"cors": "^2.8.5",
+		"cypress": "^14.5.4",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"jest": "^29.7.0",
 		"mongeese": "^0.0.1",
 		"mongoose": "^8.4.4",
 		"morgan": "^1.10.0",
-		"nodemon": "^3.1.4"
+		"nodemon": "^3.1.4",
+		"react": "^19.1.1",
+		"react-router-dom": "^7.8.2"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.28.3",
+		"@babel/plugin-transform-runtime": "^7.28.3",
+		"@babel/preset-env": "^7.28.3",
+		"@babel/preset-react": "^7.27.1",
 		"@eslint/js": "^9.6.0",
 		"@flydotio/dockerfile": "^0.5.7",
 		"@stylistic/eslint-plugin-js": "^2.3.0",
-		"eslint": "^9.6.0",
-		"globals": "^15.8.0"
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/react": "^16.3.0",
+		"babel-jest": "^29.7.0",
+		"babel-loader": "^10.0.0",
+		"css-loader": "^7.1.2",
+		"eslint": "^9.34.0",
+		"eslint-plugin-jest": "^28.14.0",
+		"eslint-plugin-react": "^7.37.5",
+		"globals": "^15.8.0",
+		"html-loader": "^5.1.0",
+		"html-webpack-plugin": "^5.6.4",
+		"jest-environment-jsdom": "^29.7.0",
+		"style-loader": "^4.0.0",
+		"webpack-cli": "^6.0.1"
+	},
+	"jest": {
+		"testEnvironment": "jsdom",
+		"testPathIgnorePatterns": [
+			"e2e-tests"
+		]
 	}
 }
