scripts for start-prod

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
+		"start-prod": "node index.js",
 		"dev": "nodemon index.js",
 		"test": "jest",
 		"build:ui": "cd Phonebook && npm run build && rm -rf ../dist && cp -r dist ../dist",
