--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"morgan": "^1.10.0",
 		"nodemon": "^3.1.4",
 		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
 		"react-router-dom": "^7.8.2"
 	},
 	"devDependencies": {
