--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,8 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:3001
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
 
   tag_release:
     needs: [simple_deployment_pipeline]
