--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,16 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "env": {
-    "test": {
-      "plugins": ["@babel/plugin-transform-runtime"]
-    }
-  }
+	"presets": [
+		"@babel/preset-env",
+		[
+			"@babel/preset-react",
+			{
+				"runtime": "automatic"
+			}
+		]
+	],
+	"env": {
+		"test": {
+			"plugins": ["@babel/plugin-transform-runtime"]
+		}
+	}
 }
