--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
-		"start-prod": "npm run build:ui && node index.js",
+		"start-prod": "cd Phonebook && npm ci --ignore-scripts --no-audit && cd .. && npm run build:ui && node index.js",
 		"dev": "nodemon index.js",
 		"test": "jest",
-		"build:ui": "cd Phonebook && npm run build && rm -rf ../dist && cp -r dist ../dist",
+		"build:ui": "cd Phonebook && npm run build:vite && rm -rf ../dist && cp -r dist ../dist",
+		"build:vite": "vite build",
 		"deploy": "fly deploy",
 		"deploy:full": "npm run build:ui && npm run deploy",
 		"logs:prod": "fly logs",
