--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '20'
       - name: Install dependencies
-        run: npm ci --ignore-scripts --no-audit
+        run: npm ci --ignore-scripts --no-audit && cd Phonebook && npm ci --ignore-scripts --no-audit && cd ..
       - name: lint
         run: npm run eslint
       - name: build
