add build production for windows

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"dev": "nodemon index.js",
 		"test": "jest",
 		"build:ui": "cd Phonebook && npm run build && rm -rf ../dist && cp -r dist ../dist",
+		"build:ui:windows": "cd Phonebook && npm run build && if exist ..\\dist rmdir /s /q ..\\dist && xcopy dist ..\\dist /e /i",
 		"deploy": "fly deploy",
 		"deploy:full": "npm run build:ui && npm run deploy",
 		"logs:prod": "fly logs",
