install dependencies of fe for production

--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: '20'
       - name: Install dependencies
-        run: npm ci --ignore-scripts --no-audit
+        run: npm ci --ignore-scripts --no-audit && cd Phonebook && npm ci --ignore-scripts --no-audit && cd ..
       - name: Build production
         run: npm run build:ui
       - uses: superfly/flyctl-actions/setup-flyctl@master
